# RecipeRAG

./: .env  README.md  app.py  config.yaml  ingredient_search.py  pyproject.toml  rag_search.py  recipe_search.py  requirements.txt  test_pipeline.py
embeddings/: full_recipe_tfidf_vectorizer.pkl  ingredient_tfidf_matrix.npz  ingredient_tfidf_vectorizer.pkl  title_tfidf_matrix.npz  title_tfidf_vectorizer.pkl
notebooks/: demo.ipynb
src/: embedding.py  generation.py  retriever.py  utils.py  vector_db.py
